# meditech-healthcheckup

./: .dockerignore  .env.example  .gitattributes  .gitignore  ACKNOWLEDGMENTS.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  docker-compose.yml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Models/: EnumerationTypes.cs  ItemMasterList.cs  PatientRegistrationBulkData.cs
Services/: CheckupService.cs  IcheckupService.cs
ViewModels/Checkup/: CheckupListReportViewModel.cs  CheckupRuleViewModel.cs  CheckupSummaryViewmodel.cs  EnterAudiogramResultViewModel.cs  EnterCheckupTestResultViewModel.cs  EnterEKGResultViewModel.cs  EnterFitnessTestResultViewModel.cs  EnterMuscleTestViewModel.cs  EnterOccuVisionTestResultViewModel.cs  EnterPapSmearViewModel.cs  EnterPhysicalExamViewModel.cs  EnterPulmonaryResultViewModel.cs  (+7 more)
backend/: Dockerfile  pyproject.toml
backend/app/: database.py  main.py
backend/app/api/v1/: diagnosis.py
backend/app/core/: config.py  logger.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: checkup.py  company.py  diagnosis.py  doctor.py  patient.py  user.py
backend/app/schemas/: diagnosis.py
backend/app/services/: ai_diagnosis.py
backend/tests/: conftest.py  test_api.py
demo/: .gitignore  app.py  database.py  requirements.txt
docs/: _config.yml  database_schema.md  database_setup.md  demo_guide.md  development_guide.md  index.md  installation_guide.md  presentation.md  server_setup.md  testing_guide.md  user_guide.md
frontend/: Dockerfile
powershell/: Microsoft.PowerShell_profile.ps1
tests/: test_ai_diagnosis.py
(+95 files in other folders)
